# sunhan

./: .gitignore
biaoding/: README.md  calibration_result.json  collect_samples.py  franka_ros_深度解析.md  generate_charuco_board.py  grasp_controller_node.py  handeye_calibrate.py  physics_table.json  physics_table_template.json  samples.json  vision_physics_demo.py  vision_physics_mapper.py  visual_servo_demo.py  visualize_panda_no_robot.launch  yolo_object_detector_node.py  知识清单.md
biaoding/boards/: README.md  charuco_a4_5x7_30mm.json
franka_ws/src/franka_ros/franka_example_controllers/: CMakeLists.txt
franka_ws/src/others/python/: collect_data.py  franka_control.py  franka_ik.py  run.py  try_tracik.py
frankx/: run.py
frankx/examples/: home.py  kinematics.py  linear.py  waypoints.py
frankx/ruckig/src/ruckig/: python.cpp
my_test/: CMakeLists.txt  README_estimate_external_force.md  estimate_external_force.cpp  franka_ros_深度解析.md  payload_identification.cpp  teleop_omega7_franka.py  test_lift_joint.py
thesis/: collect_touch.py  omega.py  teleop_franka.py  try.py  ur_omega_teleoperation_node_LZ.py
thesis/cab/: icpcalibration.py  pc.pcd  pc2.pcd  read.py  read_realsense.py
thesis/frankx/: control_node.py  franka1.py  read.py  run.py
thesis/frankx/pandapy/: bringup.py  control_node.py
thesis/panda-py/: bringup.py  bringup_joint.py  collect_pose.py  control_node.py
thesis/panda-py/panda_py_0/: ._panda_python-0.7.1+libfranka.0.7.1-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl
yolo/ultralytics-8.3.163/: my_train.py  mypredict.py
(+13 files in other folders)
